crates/compactp_diagnostics/src/snapshots/compactp_diagnostics__render__tests__render_human_error_diagnostic.snap
---
source: crates/compactp_diagnostics/src/render.rs
expression: rendered
---
error[E0012]: expected `;`
  --> test.compact:1:20
  |
1 | ledger count: Field
  |                    ^ expected `;`
  |
